<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="about.About_AgriCulture_Details">

    <TextView
        android:id="@+id/lbAgriculture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/agri_detail_info"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="16">

        <TextView
            android:id="@+id/lbNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/agri_detail_ss"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/lbVillage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/agri_detail_name"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/lbConsumerCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/agri_detail_count"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/lbLandArea"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/agri_detail_area"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/lbTaxil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/agri_detail_grain"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/lbQargidali"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/agri_detail_corn"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/lbPambiq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/agri_detail_cotton"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/lbKmartof"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/agri_detail_potetos"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/lbTerevez"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/agri_detail_vegetables"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/lbUzumBagi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/agri_detail_grape"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/lbDiger"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/agri_detail_others"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/lbYardim"
            android:layout_width="0dp"
            android:layout_height="76dp"
            android:layout_weight="2"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/agri_detail_grant"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold"/>
    </LinearLayout>


        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listViewAgriculture" />

</LinearLayout>
