<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="12">

    <TextView
        android:id="@+id/lbNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="start"
        android:paddingLeft="2dp"
        android:paddingTop="6dp"
        android:paddingRight="2dp"
        android:paddingBottom="6dp"
        android:text="@string/number"
        android:textColor="#000000"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/lbSchoolNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:paddingLeft="2dp"
        android:paddingTop="6dp"
        android:paddingRight="2dp"
        android:paddingBottom="6dp"
        android:text="@string/shcool_numbers"
        android:textColor="#000000"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/lbAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:paddingLeft="2dp"
        android:paddingTop="6dp"
        android:paddingRight="2dp"
        android:paddingBottom="6dp"
        android:text="@string/shcool_address"
        android:textColor="#000000"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/lbManagment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:paddingLeft="2dp"
        android:paddingTop="6dp"
        android:paddingRight="2dp"
        android:paddingBottom="6dp"
        android:text="@string/shcool_manager"
        android:textColor="#000000"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/lbPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:paddingLeft="2dp"
        android:paddingTop="6dp"
        android:paddingRight="2dp"
        android:paddingBottom="6dp"
        android:text="@string/shcool_phone"
        android:textColor="#000000"
        android:textSize="13sp" />

</LinearLayout>