<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="15">

    <TextView android:id="@+id/lbDay"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:textSize="16sp"
        android:textColor="#000000"
        android:text="@string/citizen_accept_days"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:gravity="center"/>

    <TextView android:id="@+id/lbFullName"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:textSize="16sp"
        android:textColor="#000000"
        android:text="@string/citizen_accept_name"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:gravity="center"/>

    <TextView android:id="@+id/lbPosition"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="6"
        android:textSize="16sp"
        android:textColor="#000000"
        android:text="@string/citizen_accept_position"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:gravity="center"/>

    <TextView android:id="@+id/lbHours"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:textSize="16sp"
        android:textColor="#000000"
        android:text="@string/citizen_accept_hours"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:gravity="center"/>

</LinearLayout>