<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="administration.StructureDetailFragment">

    <TextView
        android:id="@+id/lbTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/admin_deligates"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="11"
        tools:context="administration.StructureAdapter"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp">

        <TextView
            android:id="@+id/lbSection_Position"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:paddingBottom="6dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="6dp"
            android:text="@string/admin_positions"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lbFullName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:paddingBottom="6dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="6dp"
            android:text="@string/admin_names"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/lbPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:paddingBottom="6dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="6dp"
            android:text="@string/admin_phones"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ListView
        android:id="@+id/listViewDeligate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp" />

</LinearLayout>
