<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/layout_backgorundcolor"
    android:weightSum="11"
    tools:context="main.MainActivity">

    <RelativeLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8.3"
        android:background="#ffffff" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:paddingRight="6dp"
        android:paddingLeft="6dp"
        android:weightSum="14">

        <Button
            android:id="@+id/menu1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="3dp"
            android:layout_marginLeft="3dp"
            android:layout_weight="2"
            android:background="@drawable/home1"
            android:gravity="center"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/menu2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="3dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="2"
            android:background="@drawable/information"
            android:gravity="center"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/menu3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="3dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="2"
            android:background="@drawable/administration"
            android:gravity="center"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/menu4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/infrastructur"
            android:gravity="center"
            android:layout_marginRight="3dp"
            android:layout_marginEnd="3dp"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/menu5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="3dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="2"
            android:background="@drawable/tourism1"
            android:gravity="center"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/menu6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="3dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="2"
            android:background="@drawable/metbex"
            android:gravity="center"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/menu7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/location1"
            android:gravity="center"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:weightSum="14"
        android:paddingLeft="6dp"
        android:paddingRight="6dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/lbMenu1"
            android:gravity="center"
            android:text="@string/ana_sehife"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/lbMenu2"
            android:gravity="center"
            android:text="@string/sheki_haqqinda"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginRight="3dp"
            android:layout_marginEnd="3dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/lbMenu3"
            android:gravity="center"
            android:text="@string/icra_hakimmiyeti"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginRight="3dp"
            android:layout_marginEnd="3dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/lbMenu4"
            android:gravity="center"
            android:text="@string/infrastructur"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginRight="3dp"
            android:layout_marginEnd="3dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/lbMenu5"
            android:gravity="center"
            android:text="@string/tourism_center"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginRight="3dp"
            android:layout_marginEnd="3dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/lbMenu6"
            android:gravity="center"
            android:text="@string/sheki_metbexi"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginRight="3dp"
            android:layout_marginEnd="3dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/lbMenu7"
            android:gravity="center"
            android:text="@string/user_location"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>

